@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-05-24T16:17:35Z",
+  "timestamp" : "2022-05-25T08:15:38Z",
   "count_outdated" : 293,
   "uniques_outdated" : 152,
-  "count" : 328,
+  "count" : 327,
   "uniques" : 175,
   "clones" : [
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
